# misc-mini-projects

./: .git-blame-ignore-revs  LICENSE  README.md  TODO
barnsley_fern/: barnsley_fern.py  requirements.txt
cnake/: README.md  cnake.c
deadly_slugs/: main.py  opensimplex.py  slugs.py
deadly_slugs/media/img/: convert.sh
double_pendulum/: README.md  double_pendulum.py
ionizing_radiation_art/: cover.py  ionizing_radiation_art.py  requirements.txt
julia_set_zoomer/: README.md  julia_set_zoomer.py  requirements.txt
lorenz_attractor/: README.md  lorenz_attractor.py
mandelbrot_set/: mandelbrot_set.py  requirements.txt
perlin_flow_playground/: README.md  perlin_flow_playground.py
perlin_noise/: perlin.py  plot.py  requirements.txt
plane_rotation/: rotate.py
reaction_diffusion_art/: README.md  reaction_diffusion_art.py
runge_kutta_4/: README.md  pyproject.toml  setup.py
runge_kutta_4/examples/: damped_oscillator_comparison.py  three_body_problem.py
runge_kutta_4/src/ode/: __init__.py
runge_kutta_4/src/ode/solver/: __init__.py  _rk4.c  rk4.py  rk4_numpy.py  velocity_verlet.py
runge_kutta_4/src/rk4/: __init__.py
runge_kutta_4/src/rk4/solver/: __init__.py  _rk4.c  rk4.py  velocity_verlet.py
runge_kutta_4/tests/: test_rk4.py  test_rk4_accuracy.py  test_rk4_numpy.py  test_velocity_verlet.py  test_velocity_verlet_accuracy.py
